--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Stream</h1>
+    <!-- video element -->
+    <!-- <video id="video" width="640" height="480" controls></video> -->
 
     <!-- import stram.js -->
     <script src="./scripts/stream.js"></script>
+    <script src="./scripts/record.js"></script>
 </body>
 </html>
